--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
 
     <div id="login-btn">
-        <a href="tel:678-665-3503"><button class="btn">call us</button></a>
+        <a href="tel:478-304-3435"><button class="btn">call us</button></a>
         <!-- <i class="far fa-user"></i> -->
     </div>
 
@@ -586,9 +586,9 @@
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="https://api.whatsapp.com/send?phone=16786653503&text=Tem%20mais%20imagens%20do%20ve%C3%ADculo%20%3F" target="_blank"><i class="fas fa-phone"></i>whatsapp (678) 665-3503 </a>
-            <!-- <a href="sms://+5541998367006?body=Teste página web"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Contact Us</button></a> -->
-            <a href="sms://+16786653503?body=Teste página web"><i class="fas fa-phone"></i> sms (678) 665-3503 </a>
+            <a href="https://api.whatsapp.com/send?phone=+14783043435&text=Tem%20mais%20imagens%20do%20ve%C3%ADculo%20%3F" target="_blank"><i class="fas fa-phone"></i>whatsapp (478) 304-3435 </a>
+            <!-- <a href="sms://+14783043435?body=Teste página web"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Contact Us</button></a> -->
+            <a href="sms://+14783043435?body=Teste página web"><i class="fas fa-phone"></i> sms (478) 304-3435 </a>
             <a href="#"> <i class="fas fa-envelope"></i> youremail@account.com </a>
             <a href="#"> <i class="fas fa-map-marker-alt"></i> georgia, US - 30144 </a>
         </div>
